--- a/alum/alum_registration.html
+++ b/alum/alum_registration.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>User Registration Form</title>
+	<title>Alumni Registration</title>
 </head>
 <body>
-	<h2>User Registration Form</h2>
-	<form action="registration.php" method="POST">
+	<h2>Alumni Registration Form</h2>
+	<form action="alum_registration.php" method="POST">
 		<label for="fname">First Name:*</label>
 		<input type="text" id="fname" name="fname" required>
 		<label for="email">Email:*</label>
@@ -16,8 +16,6 @@
 		<input type="password" id="confirm_password" name="confirm_password" required>
 		<label for="rollno">Roll No:*</label>
 		<input type="text" id="rollno" name="rollno" required>
-		<label for="cpi">CPI:*</label>
-		<input type="number" id="cpi" name="cpi" min="0" step="0.01" required>
 		<label for="qualification">Qualification:*</label>
 		<select id="qualification" name="qualification">
 			<option value="btech">B.Tech</option>
@@ -88,7 +86,7 @@
 			input[type=submit]:hover {
 			  background-color: #005959;
 			}
-			
-				</style>
+	</style>
 </body>
 </html>
+
