--- a/companies/company_registration.html
+++ b/companies/company_registration.html
@@ -49,13 +49,15 @@
   <body>
     <form action="company_registration.php" method="POST">
       <h2>Company Registration</h2>
-      <label for="email">Email</label>
+      <label for="email">Email*</label>
       <input type="email" id="email" name="email" required>
-      <label for="company_name">Company Name</label>
+      <label for="company_name">Company Name*</label>
       <input type="text" id="company_name" name="company_name" required>
-      <label for="password">Password</label>
+      <label for="placement-since">Placement Since Year:*</label>
+      <input type="number" id="placement-since" name="placement-since" min="1900" max="2099" step="1" value="2022" required>
+      <label for="password">Password*</label>
       <input type="password" id="password" name="password" required>
-      <label for="confirm_password">Confirm Password</label>
+      <label for="confirm_password">Confirm Password*</label>
       <input type="password" id="confirm_password" name="confirm_password" required>
       <input type="submit" value="Register">
     </form>
